# Learning-rust

controlFlow/src/: main.rs
dataTypes/: readme.Md
dataTypes/src/: main.rs
functions/: readme.MD
functions/src/: main.rs
guessing_game/src/: main.rs
hello_cargo/: readme.MD
hello_word/: main  readme.MD
variables/: readme.MD
zero2prod/: Cargo.toml  Dockerfile  readme.MD  spec.yaml
zero2prod-axum/: Cargo.toml  readme.md
zero2prod-axum/scripts/: init_db.sh
zero2prod-axum/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod-axum/src/routes/: health_check.rs  subscriptions.rs
zero2prod-axum/tests/: health_check.rs
zero2prod/migrations/: 20241231074039_create_subscriptions_table.sql
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
