[package]
name = "zero2prod_axum"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod_axum"

[dependencies]
axum = "0.7.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum-server = "0.7.1"

[dev-dependencies]
reqwest= "0.11"
