[package]
name = "zero2prod_axum"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path="src/main.rs"
name="zero2prod_axum"

[dependencies]
axum = "0.7.9"
axum-macros = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum-server = "0.7.1"
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
axum-tracing-opentelemetry = "0.24.2"
tower-http = { version = "0.6.1", features = ["trace"] }
 
# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

[dev-dependencies]
reqwest= "0.11"
once_cell = "1"

